apps/easypanel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: easypanel-service
  namespace: rancher
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 443
      name: https
