apps/easypanel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easypanel-ingress
  namespace: rancher
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: easypanel.gomes.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: easypanel-service
            port:
              name: https
  tls:
  - hosts:
    - easypanel.gomes.dev
    secretName: easypanel-tls # as expected by easypanel
